fixed footer social media links with aria-labels, fixed contrast errors on errors to make it AA compliant

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,4 +8,9 @@
 
 #login-error-msg {
     opacity: 0;
-  }
+    color: #ff7a87;
+}
+
+.invalid-feedback {
+    color: #ff7a87;
+}
